<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white"
    android:orientation="vertical" >
    
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp">
	    <!-- 取消 -->
	    <TextView
            android:id="@+id/addTagsCancelTextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/btn_setting_back"
            android:drawablePadding="-5dip"
            android:text="@string/cancelText"
            android:textColor="@color/text_blue_darkblue"
            android:textSize="14sp" />
		<!-- 完成 -->	
	    <Button 
	        android:id="@+id/addTagsFinishBtn"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="10dp"
	        android:layout_centerVertical="true"
	        android:padding="10dp"
	        android:textSize="14sp"
	        android:textColor="@color/text_blue_darkblue"
	        android:text="@string/finishText"
	        android:background="@drawable/btn_normal"/>
	    <!-- 标题 -->
	     <TextView 
	        android:layout_centerInParent="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textColor="@color/black"
	        android:text="@string/addTags"/> 
	    
	</RelativeLayout>
	
	<!-- 自定义标签输入 -->
	<RelativeLayout
		android:layout_marginTop="10dp"
	    android:layout_width="match_parent"
	    android:layout_height="44dip">
	    <EditText 
	        android:id="@+id/editTags"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="13dip"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:hint="@string/addTagsTipsText"
			android:maxLength="10"
	        android:textColorHint="@color/modifyinfo_text_color"
	        android:textColor="@color/text_gray"
	        android:background="@null"
	        android:textSize="15sp"/>
	</RelativeLayout>
	
	<!-- 热门标签 -->
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:id="@+id/tagsLine"
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="@color/main_highline_color"/>
	    <TextView
	        android:id="@+id/titleTags"
	        android:layout_width="match_parent"
	        android:layout_height="35dip"
	        android:textSize="12sp"
	        android:gravity="center_vertical"
	        android:paddingLeft="13dip"
	        android:background="@color/vice_color"
	        android:textColor="@color/tags_title_color"
	        android:layout_below="@id/tagsLine"
	        android:text="@string/hotTagsText"/>
	    <TextView 
	        android:id="@+id/tagsLineTwo"
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="@color/main_highline_color"
	        android:layout_below="@id/titleTags"/>
	    
	   <com.xiuxiu.view.TagsViewGroup
            android:id="@+id/myViewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false" 
            android:layout_marginLeft="2dp"
            android:layout_marginRight="17dp"
            android:layout_below="@id/tagsLineTwo"
	        android:listSelector="@android:color/transparent">
	   </com.xiuxiu.view.TagsViewGroup>
	   
	   <ListView 
	       android:id="@+id/listTags"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent"
	       android:footerDividersEnabled="true"
	       android:visibility="gone">
	   </ListView>
	   
	   <!-- 提示 -->
	   <TextView 
	       android:id="@+id/addTagsPromptTextView"
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:layout_below="@id/tagsLine"
	       android:textColor="@color/text_dark_gray"
	       android:visibility="gone"
	       android:gravity="center"
	       android:layout_marginTop="10dp"/>
	</RelativeLayout>
	
</LinearLayout>
